# Imager

./: .gitignore  CMakeLists.txt  Configs.cpp  Configs.h  ImagerMain.cpp  LICENSE  README.md  about.cpp  about.h  about.ui  config.cpp  config.h  default.yaml  imager.cpp  imager.h  imager.ui  settings.cpp  settings.h  settings.ui
